sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:30: error: 'while' expected but '}' found.
} while (change=true)
^AlgBubbleSort1:30: error: ';' expected but 'while' found.
} while (change=true)
  ^AlgBubbleSort1:34: error: Unmatched closing brace '}' ignored here
}
^